# USTC-CS-Courses-Resource

./: README.md  index.html
algorithm/: model.java
algorithm/PB15111604-project1/: PB15111604-project1.doc  PB15111604-金泽文-project1.doc
algorithm/PB15111604-project3/: PB15111604-金泽文-project3.doc
algorithm/PB15111604-project4/: PB15111604-金泽文-project4.doc
公选课/交响乐赏析/: PB15111604_金泽文_波莱罗赏析.txt
大三上/微机原理/: 1.asm  2.asm  3.txt  Sample.txt  Test.doc  Test.txt  ex1.asm  ex2.asm  ex3.asm  ex4.asm
大三上/程序设计语言基础(英)/: notes_haskell.txt
大三上/算法基础/: 算法基础-2009试卷答案.doc
大三上/编译原理和技术(H)/: README.md  lab2-pre.md
大三上/编译原理和技术(H)/git库/PB15111604/c1interpreter/: .gitignore  CMakeLists.txt  README.md
大三上/编译原理和技术(H)/git库/PB15111604/c1interpreter/src/: assembly_builder.cpp  assembly_builder.h  main.cpp  runtime.cpp  runtime.h
大三上/编译原理和技术(H)/git库/PB15111604/c1interpreter/src/runtime/: io.c  io.h
大三上/编译原理和技术(H)/git库/PB15111604/c1interpreter/test_cases/: Err.c1  assign.c1  cond.c1  declstmt.c1  econd.c1  elvalue.c1  error_array_as_int.c1  error_array_init_variable.c1  error_assign_const.c1  error_define_array_index_variable.c1  error_divided_by_zero.c1  error_global_array_init_not_const.c1  error_int_as_array.c1  error_multiple_name.c1  error_no_name.c1  error_too_much.c1  fib.c1  function.c1  global_assgin.c1  global_decl.c1  index_array.c1  jiecheng.c1  local_array.c1  local_assgin.c1  local_decl.c1  sum.c1  variable_index.c1
大三上/计算机网络/: Chapter8.ppt  answer.doc  quiz-1-2017-answer.doc  quiz-2-2017-answer.doc  quiz-3-2017-answer.doc  (+1 more)
大二上/ICS/: T.hex  (+6 more)
算法基础/: 算法基础-2009试卷.doc
(+1338 files in other folders)
